# ReadHub

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
compose/django/: Dockerfile
compose/local/django/: Dockerfile  entrypoint  start
compose/local/django/celery/flower/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/worker/: start
requirements/: base.txt  local.txt  production.txt
src/apps/app_1/: apps.py
src/apps/book/: admin.py  apps.py  models.py
src/apps/book/migrations/: 0001_initial.py
src/apps/membership/: admin.py  apps.py  models.py
src/apps/membership/migrations/: 0001_initial.py  0002_initial.py
src/apps/provider/: apps.py
src/apps/user/: apps.py  models.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/v1/presentation/admin/setting/: library_employee.py  schema.py  serializers.py
src/config/settings/: base.py  development.py  local.py
src/config/tools/: celery.py  celery_app.py  database.py  env.py
src/core/managers/: base.py
src/core/models/: base.py
src/core/swagger/: urls.py  views.py
src/core/validations/: validation.py
src/locale/fa/LC_MESSAGES/: django.po
