# ==== project ====
[project]
name = "ReadHub"
version = "0.0.0"
requires-python = "==3.12.7"

authors = [
    { name = "Fereshteh Ahmadi", email = "" },
    { name = "Zahra Najafiyan", email = "zahra.najafiyanfar@gmail.com" },
]
description = "Your gateway to a network of libraries. One account, endless books. ReadHub makes borrowing books simple and seamless."
readme = "README.md"
license = { file = "LICENSE" }




dependencies = [
    "argon2-cffi==23.1.0",
    "django==5.2.1",
    "django-environ==0.12.0",
    "django-health-check==3.18.3",
    "django-structlog[celery]==9.1.1",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "django-filter==25.1",
    "drf-spectacular==0.28.0",
    "celery==5.5.2",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "redis==6.1.0",
    "hiredis==3.2.1",
    "Pillow==11.1.0",
    "ipython==9.2.0",
    "requests==2.32.3",
    "sentry-sdk==2.33.0",
]

[project.optional-dependencies]
local = [
    "gunicorn==23.0.0",
    "psycopg[binary, pool]==3.2.3",
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.0.0",
    "mypy==1.13.0",
    "django-stubs[compatible-mypy]==5.1.1",
    "djangorestframework-stubs==3.15.1",
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "pytest-django==4.11.1",
    "factory-boy==3.3.1",
    "coverage==7.6.4",
    "debugpy==1.8.11",
    "flake8==7.2.0",
    "flake8-isort==6.1.2",
    "black==25.1.0",
    "djlint==1.35.2",
    "pylint-django==2.6.1",
    "pre-commit==4.2.0",
    "flower==2.0.1",
    "django-debug-toolbar==5.2.0",
    "django-coverage-plugin==3.1.0",
    "django-querycount==0.8.3",
    "django-silk==5.3.1",
    "docutils==0.21.2",
    "django-sql-explorer==5.3",
    "docutils==0.21.2",
    "django-sql-explorer==5.3",
]
development = [
    "gunicorn==23.0.0",
    "psycopg[binary, pool]==3.2.3",
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.0.0",
    "mypy==1.13.0",
    "django-stubs[compatible-mypy]==5.1.1",
    "djangorestframework-stubs==3.15.1",
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "pytest-django==4.11.1",
    "factory-boy==3.3.1",
    "coverage==7.6.4",
    "debugpy==1.8.11",
    "flake8==7.2.0",
    "flake8-isort==6.1.2",
    "black==25.1.0",
    "djlint==1.35.2",
    "pylint-django==2.6.1",
    "pre-commit==4.2.0",
    "django-debug-toolbar==5.2.0",
    "django-coverage-plugin==3.1.0",
    "django-querycount==0.8.3",
    "django-silk==5.3.1",
    "docutils==0.21.2",
    "django-sql-explorer==5.3", ]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test"
pythonpath = "src"
python_files = ["tests.py", "test_*.py"]
filterwarnings = [
    "ignore:::.*factory.django:182",
    "ignore:::.*django.core.handlers.base:61",
    "ignore:::.*rest_framework.urlpatterns:108",
]

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py312']


# ==== flake8 ====
[tool.flake8]
max-line-length = 119


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["firebase", "config"]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== Coverage ====
[tool.coverage.run]
include = ["src/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== mypy ====
[tool.mypy]
show_traceback = true
ignore_errors = true


[tool.django-stubs]
django_settings_module = "config.django.test"
ignore_errors = false


[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true


[[tool.mypy.overrides]]
# Django test should not produce any errors:
module = "*/tests/*"
ignore_errors = true


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
django-settings-module = "config.django.local"


[tool.pylint.FORMAT]
max-line-length = 119


[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]


[tool.pylint.DESIGN]
max-parents = 13


[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

# ==== commitizen ====
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
